# BiNums

./: .gitattributes  .gitignore  BiNums.cpp  BiNums.sln  BiNums.vcxproj  BiNumsMain.cpp  BiNumsTest.cpp  BiNumsTest.vcxproj  BiNumsTestCases.toml  CMakeLists.txt  Common.h  FixedNumber.h  Float16m10e5s1.h  Float16m7e8s1.h  Float8m2e5s1.h  Float8m3e4s1.h  FloatNumber.h  Int24.h  Readme.md  Readme.txt  SeeBiNum.cpp  SeeBiNum.sln  SeeBiNum.vcxproj  precomp.cpp  precomp.h
Win32_Release/: BiNums.iobj  BiNums.ipdb
Win32_Release/BiNums.tlog/: BiNums.lastbuildstate  BiNums.write.1u.tlog  CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
